did some code and functionality improvements: - JDL files can be deleted on exit (glite.deleteJDL preference) - the VOMS proxy is going to be recycled if the lifetime is sufficient - replaced some System.out.println and e.printStackTrace by loggers and other code cleanup - support for JDL RetryCount - polling interval can be changed (glite.pollIntervalSecs) - adaptor now supports metrics. Instead of polling for status updates, a class may register as a metric listener for job.status at the job